# block_chat

./: Cargo.toml  compose.yaml  events.txt  run.sh
docker/: Dockerfile.helper  Dockerfile.node
okeanos/: block_chat.service  block_chat_2.service  copy_and_build_all.sh  override.conf  override_2.conf  run_all.sh
src/: account.rs  blockchain.rs  bootstrap.rs  cli.rs  crypto.rs  history.rs  lib.rs  peer.rs  protocol.rs
src/account/: accounts_catalog.rs
src/blockchain/: block.rs  transaction.rs
src/blockchain/block/: block_validator.rs
src/blockchain/transaction/: transaction_validator.rs
src/peer/: peers_catalog.rs
