[package]
name = "block_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
non-empty-string = { version = "0.2.4", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
